--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-materialize-src/README.md
-materialize-src/LICENSE
-materialize-src/.sass-cache
+BabyNoggin/README.md
+BabyNoggin/LICENSE
+BabyNoggin/.sass-cache
 
